[gd_scene load_steps=7 format=2]

[ext_resource path="res://common/ui/simpleDialog/windows.png" type="Texture" id=1]
[ext_resource path="res://common/themes/fonts/dogica.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://common/ui/simpleDialog.gd" type="Script" id=3]
[ext_resource path="res://common/themes/default.theme" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="simpleDialog" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="window" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.625
margin_top = -44.0
margin_right = 155.375
margin_bottom = -4.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 5
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="window"]
margin_left = 5.0
margin_top = 7.0
margin_right = 304.0
margin_bottom = 34.0
rect_scale = Vector2( 0.998386, 0.983828 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="talker" type="Label" parent="window/HBoxContainer"]
margin_top = 10.0
margin_bottom = 17.0
theme = ExtResource( 7 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discussion" type="RichTextLabel" parent="window/HBoxContainer"]
margin_left = 4.0
margin_right = 285.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "tertetetetet"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextButton" type="Button" parent="window/HBoxContainer"]
margin_left = 289.0
margin_right = 299.0
margin_bottom = 27.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 2 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="window/HBoxContainer/nextButton" to="." method="_on_Button_pressed"]
